--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>Zero Protocol</title>
+</head>
+
+<body>
+    <p>Hello world!</p>
+</body>
+
+</html>
