--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
         <p>version 0.1 Not revised, can contain typos.</p>
     </div>
 
+    <div id="index">
+        <p><strong>CONTENTS:</strong></p>
+        <p><a href="#ancla-1">INTRODUCTION</a></p>
+        <p><a href="#ancla-2">PROBLEM TO SOLVE</a></p>
+        <p><a href="#ancla-3">PROPOSED SOLUTION</a></p>
+        <p><a href="#ancla-4">THE ECONOMICS BEHIND THE PROTOCOL</a></p>
+        <p><a href="#ancla-5">USE CASES</a></p>
+    </div>
+
     <div id="introduction">
+        <a name="ancla-1"></a>
         <h2 id="introduction-title">INTRODUCTION</h2>
         <p>
             A Zero Knowledge Proof (ZKP) system is a cryptographic protocol that establishes a method for one party to
@@ -60,6 +70,7 @@
     </div>
 
     <div id="problem">
+        <a name="ancla-2"></a>
         <h2 id="problem-title">PROBLEM TO SOLVE</h2>
         <p>
             When we talk about financial transactions and lending system or financial processes in which there is no
@@ -85,6 +96,7 @@
     </div>
 
     <div id="solution">
+        <a name="ancla-3"></a>
         <h2 id="solution-title">PROPOSED SOLUTION</h2>
         <p>
             When we talk about ZKP, there are always 2 parties: the prover and the verifier. The prover wants to
@@ -150,6 +162,7 @@
     </div>
 
     <div id="economics">
+        <a name="ancla-4"></a>
         <h2 id="economics-title">THE ECONOMICS BEHIND THE PROTOCOL</h2>
         <p>
             When we design the economics of this protocol, 3 fundamental facts appear:
@@ -178,6 +191,7 @@
     </div>
 
     <div id="cases">
+        <a name="ancla-5"></a>
         <h2 id="cases-title">USE CASES</h2>
         <p>
             The following use cases are very basic applications of the protocol, applied to retail users. As can be seen,
