--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <div id="index">
-        <p><strong>CONTENTS:</strong></p>
+        <h2>CONTENTS</h2>
         <p><a href="#ancla-1">INTRODUCTION</a></p>
         <p><a href="#ancla-2">PROBLEM TO SOLVE</a></p>
         <p><a href="#ancla-3">PROPOSED SOLUTION</a></p>
