--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 
         <img id="title-image" src="title.png">
 
-        <h1 id="european">EUROPEAN CENTRAL BANK</h1>
-        <h2 id="executive">Executive Summary</h2>
-        <p id="date">14th November 2020</p>
+        <h2 id="executive">Wiki</h2>
         <p>
             Author: Javier Blanco Thomas, CEO. Glue Digital.
             <a href="mailto:javi@glue.digital">javi@glue.digital</a>
